--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "main": "lib/compiler.js",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "clone": "^2.1.1",
     "image-size": "^0.5.1",
     "loader-utils": "^1.1.0",
     "merge-options": "0.0.64",
+    "posthtml-rename-id": "^1.0",
     "posthtml-svg-fill": "^1.0",
     "posthtml-svg-mode": "^1.0",
-    "posthtml-rename-id": "^1.0",
-    "query-string": "^4.3.2"
+    "query-string": "^4.3.2",
+    "traverse": "^0.6.6"
   }
 }
