--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "repository": "https://github.com/kisenka/svg-baker",
   "main": "lib/compiler.js",
+  "files": [
+    "lib/",
+    "namespaces.js",
+    "README.md"
+  ],
   "dependencies": {
     "bluebird": "^3.5.0",
     "clone": "^2.1.1",
