--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "image-size": "^0.5.1",
     "loader-utils": "^1.1.0",
     "merge-options": "0.0.64",
+    "postcss": "^5.2.17",
+    "postcss-prefix-selector": "^1.6.0",
     "posthtml-rename-id": "^1.0",
     "posthtml-svg-mode": "^1.0",
     "query-string": "^4.3.2",
