--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "posthtml-svg-mode": "^1.0",
     "query-string": "^4.3.2",
     "traverse": "^0.6.6"
+  },
+  "scripts": {
+    "lint": "eslint lib test",
+    "test": "nyc --reporter=lcov mocha -r ../../test/mocha-setup.js"
   }
 }
